Adding maintenance files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
+<!DOCTYPE html>
 <html>
-  <head>Sorry</head>
-  <body> <h1>Sorry Currently Under Maintenance </body>
-</html?
+  <head>
+    <meta charset="utf-8">
+    <title>Sorry</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="master.css">
+  </head>
+  <body>
+    <div class="sad col">
+      <h1>:(</h1>
+    </div>
+    <div class="title col">
+      <h1>Sorry, my portfolio is currently under maintenance.</h1>
+    </div>
+  </body>
+</html>
