--- a/index.html
+++ b/index.html
@@ -3,16 +3,92 @@
   <head>
     <meta charset="utf-8">
     <title>Sorry</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="master.css">
   </head>
   <body>
-    <div class="sad col">
-      <h1>:(</h1>
-    </div>
-    <div class="title col">
-      <h1>Sorry, my portfolio is currently under maintenance.</h1>
-    </div>
+      <div class="wrapper">
+        <div id="banner">
+          <div id="title1">
+            <h1>Hi, I'm Joshua. I design and build.</h1>
+          </div>
+          <div id="type">
+            <h1>Web applications</h1>
+          </div>
+          <div id="more">
+            <p>Find out what I've done</p>
+            <img src="images/down-arrow.png" alt="">
+          </div>
+        </div>
+      </div>
+
+        <div id="skills">
+          <div id="skills-title">
+            <h1>Expertise</h1>
+          </div>
+
+          <div class="skill-wrapper">
+            <div class="skill">
+              <img src="images/001-mobile.png" alt=""><br>
+              <h2>Coding</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            </div>
+            <div class="skill">
+              <img src="images/003-responsive.png" alt=""><br>
+              <h2>Mobile Development</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            </div>
+            <div class="skill">
+              <img src="images/002-settings.png" alt=""><br>
+              <h2>Frameworks</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            </div>
+          </div>
+        </div>
+
+        <div id="projects">
+          <div id="project-title">
+            <h1>Personal Projects</h1>
+          </div>
+
+          <div id="project-wrapper">
+            <div class="project">
+              <img src="images/books.png" alt=""><br>
+              <h2>Project Sivir</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+            </div>
+            <div class="project">
+              <img src="images/camping.png" alt=""><br>
+              <h2>Project Azir</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+            </div>
+            <div class="project">
+              <img src="images/cloud-computing.png" alt=""><br>
+              <h2>Project Taric</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+            </div>
+            <div class="project">
+              <img src="images/lamp.png" alt=""><br>
+              <h2>Project Varus</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+            </div>
+            <div class="project">
+              <img src="images/paint.png" alt=""><br>
+              <h2>Project Nasus</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+            </div>
+            <div class="project">
+              <img src="images/shuffle.png" alt=""><br>
+              <h2>Project Jhin</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+            </div>
+          </div>
+        </div>
+
+        <div id="footer">
+          <h2>Available for hire</h2> <br>
+          <button type="button" name="button"><a href="#">Get Started</a></button>
+        </div>
   </body>
 </html>
