--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p class="category_item" id='js'>Javascript</p>
             <div class="holder">
               <a href="/projects/gigaweb-solutions/index.html"><img src="images/camping.png" class="project laravel" alt=""></a>
-              <img src="images/camping.png" class="project laravel" alt="">
+              <img src="images/giga-logo.png" class="project laravel" alt="">
               <img src="images/camping.png" class="project ember" alt="">
               <img src="images/camping.png" class="project js" alt="">
               <img src="images/camping.png" class="project laravel" alt="">
