GigaWeb Complete with logo update
Giga logo added

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
             <p class="category_item" id='ember'>EmberJS</p>
             <p class="category_item" id='js'>Javascript</p>
             <div class="holder">
-              <a href="/projects/gigaweb-solutions/index.html"><img src="images/camping.png" class="project laravel" alt=""></a>
-              <img src="images/giga-logo.png" class="project laravel" alt="">
-              <img src="images/camping.png" class="project ember" alt="">
-              <img src="images/camping.png" class="project js" alt="">
-              <img src="images/camping.png" class="project laravel" alt="">
-              <img src="images/camping.png" class="project laravel" alt="">
-              <img src="images/camping.png" class="project ember" alt="">
-              <img src="images/camping.png" class="project js" alt="">
+              <a target="_blank" href="/projects/gigaweb-solutions/index.html"><img src="images/complete.png" class="project laravel" alt=""></a>
+              <img src="images/complete.png" class="project laravel" alt="">
+              <img src="images/complete.png" class="project ember" alt="">
+              <img src="images/complete.png" class="project js" alt="">
+              <img src="images/complete.png" class="project laravel" alt="">
+              <img src="images/complete.png" class="project laravel" alt="">
+              <img src="images/complete.png" class="project ember" alt="">
+              <img src="images/complete.png" class="project js" alt="">
             </div>
 
           </div>
