--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div id="footer">
           <h2>Available for hire</h2> <br>
-          <button type="button" name="button"><a href="#">Get Started</a></button>
+          <button type="button" name="button"><a href="/new">Get Started</a></button>
         </div>
   </body>
 </html>
