--- a/new/index.html
+++ b/new/index.html
@@ -10,8 +10,10 @@
     <header id="showcase" class="grid">
       <div class="bg-image"></div>
       <div class="content-wrap">
-        <h1>Hi. <br> I'm Joshua. <br> I am a Web Developer</h1>
-
+        <img src="images/logo.png" alt="" id="logo">
+        <h1>Hi <br> I'm Joshua. <br> I am a Web Developer</h1>
+        <button type="button" name="button">I am availble for hire.</button>
+        <p>Click here to find more.</p>
       </div>
     </header>
 
