--- a/new/index.html
+++ b/new/index.html
@@ -11,8 +11,8 @@
       <div class="bg-image"></div>
       <div class="content-wrap">
         <img src="images/logo.png" alt="" id="logo">
-        <h1>Hi <br> I'm Joshua. <br> I am a Web Developer</h1>
-        <button type="button" name="button">I am availble for hire.</button>
+        <h1>Hi, I'm Joshua. <br> I am a Web Developer.</h1>
+        <button type="button" name="button"><strong>I am availble for hire.</strong></button>
         <p>Click here to find more.</p>
       </div>
     </header>
