--- a/new/index.html
+++ b/new/index.html
@@ -2,74 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>J|Hudson</title>
+    <title>Try 2</title>
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <!-- Banner -->
-    <header id="showcase" class="grid">
-      <div class="bg-image"></div>
-      <div class="content-wrap">
-        <img src="images/logo.png" alt="" id="logo">
-        <h1>Hi, I'm Joshua. <br> I am a Web Developer.</h1>
-        <button type="button" name="button"><strong>I am availble for hire.</strong></button>
-        <p>Click here to find more.</p>
-      </div>
-    </header>
-
-    <main>
-      <!-- Section A -->
-      <section id="section-a" class="grid">
-        <ul>
-          <li>
-            <div class="card">
-              <img src="" alt="">
-              <div class="card-content">
-                <div class="card-title"><h3></h3></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi earum tempore quam dolorem exercitationem nihil veniam iure, ab! Inventore, aliquid.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="card">
-              <img src="" alt="">
-              <div class="card-content">
-                <div class="card-title"><h3></h3></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi earum tempore quam dolorem exercitationem nihil veniam iure, ab! Inventore, aliquid.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="card">
-              <img src="" alt="">
-              <div class="card-content">
-                <div class="card-title"><h3></h3></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi earum tempore quam dolorem exercitationem nihil veniam iure, ab! Inventore, aliquid.</p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </section>
-
-      <!-- Section B -->
-      <section id="section-b" class="grid">
-        <div class="section-b-title"><h2>Personal Projects</h2></div>
-        <div class="project-nav">
-          <ul>
-            <li>All</li>
-            <li>Laravel</li>
-            <li>Javascript</li>
-            <li>PHP</li>
-          </ul>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <h2>Want to find out more?</h2>
-      <button>Click Here</button>
-    </footer>
-
-
+  <header id="showcase">
+    <div class="bg-image"></div>
+    <img id="logo" src="images/logo.png" alt="">
+    <h1 id="showcase-title">Hi, I'm Joshua.<br> I am a Web Developer.</h1>
+    <button >I am availble to hire.</button>
+    <p id="showcase-more">Click here to find out more</p>
+  </header>
   </body>
 </html>
