--- a/new/index.html
+++ b/new/index.html
@@ -11,7 +11,7 @@
     <img id="logo" src="images/logo.png" alt="">
     <h1 id="showcase-title">Hi, I'm Joshua.<br> I am a Web Developer.</h1>
     <button >I am availble to hire.</button>
-    <p id="showcase-more">Click here to find out more</p>
+    <p id="showcase-more">Check out my projects here</p>
   </header>
   </body>
 </html>
