--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sorry</title>
+    <title>J|Hudson</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto:300,400" rel="stylesheet">
 
@@ -36,29 +36,33 @@
         </div>
       </div>
 
-        <div id="skills">
-          <div id="skills-title">
-            <h1>Expertise</h1>
-          </div>
-
-          <div class="skill-wrapper">
-            <div class="skill">
-              <img src="images/001-mobile.png" alt=""><br>
-              <h2>Coding</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+      <!-- Section B -->
+      <section id="section-b">
+        <h2>My Skills</h2>
+        <ul>
+          <li>
+            <img src="images/001-mobile.png" alt="">
+            <div class="card-content">
+              <h3 class="card-title">Coding</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis illum laudantium, cum dolorum, provident molestiae quasi possimus doloribus voluptas sed.</p>
             </div>
-            <div class="skill">
-              <img src="images/003-responsive.png" alt=""><br>
-              <h2>Mobile Development</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+          </li>
+          <li>
+            <img src="images/002-settings.png" alt="">
+            <div class="card-content">
+              <h3 class="card-title">Frameworks</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis illum laudantium, cum dolorum, provident molestiae quasi possimus doloribus voluptas sed.</p>
             </div>
-            <div class="skill">
-              <img src="images/002-settings.png" alt=""><br>
-              <h2>Frameworks</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+          </li>
+          <li>
+            <img src="images/003-responsive.png" alt="">
+            <div class="card-content">
+              <h3 class="card-title">Responsive Design</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis illum laudantium, cum dolorum, provident molestiae quasi possimus doloribus voluptas sed.</p>
             </div>
-          </div>
-        </div>
+          </li>
+        </ul>
+      </section>
 
         <div id="projects">
           <div id="project-title">
