--- a/new/index.html
+++ b/new/index.html
@@ -2,16 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Try 2</title>
+    <title>Verson 2</title>
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-  <header id="showcase">
-    <div class="bg-image"></div>
-    <img id="logo" src="images/logo.png" alt="">
-    <h1 id="showcase-title">Hi, I'm Joshua.<br> I am a Web Developer.</h1>
-    <button >I am availble to hire.</button>
-    <p id="showcase-more">Check out my projects here</p>
-  </header>
+    <header>
+      <div id="showcase">
+        <div id="bg-image"></div>
+        <div id="showcase-content">
+          <h1 id="showcase-title">Welcome to the site guys.</h1>
+          <button type="button" name="button">I'm available for hire.</button>
+          <p>Click here for my projects</p>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
