--- a/new/index.html
+++ b/new/index.html
@@ -12,9 +12,54 @@
         <div id="showcase-content">
           <h1 id="showcase-title">Welcome to the site guys.</h1>
           <button type="button" name="button">I'm available for hire.</button>
-          <p>Click here for my projects</p>
+        </div>
+        <div id="project-link">
+          <p>Lets see the work I've done</p>
         </div>
       </div>
     </header>
+
+    <!-- Section A -->
+
+    <main>
+      <section id="section-a">
+        <h1>Expertise</h1>
+        <p>Just a few of my skills ... </p>
+        <ul>
+          <li>
+            <div class="card">
+              <img class="card-img" src="images/001-mobile.png" alt="">
+              <div class="card-content">
+                <h2>Coding</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, totam! Magni culpa dolorem consequuntur accusamus et ratione corporis repellendus. Ab.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <img class="card-img" src="images/002-settings.png" alt="">
+              <div class="card-content">
+                <h2>Frameworks</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, totam! Magni culpa dolorem consequuntur accusamus et ratione corporis repellendus. Ab.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <img class="card-img" src="images/003-responsive.png" alt="">
+              <div class="card-content">
+                <h2>Responsive Design</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, totam! Magni culpa dolorem consequuntur accusamus et ratione corporis repellendus. Ab.</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Section-b -->
+      <section id="section-b">
+                
+      </section>
+    </main>
   </body>
 </html>
