--- a/new/index.html
+++ b/new/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Verson 2</title>
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/master.css">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -19,9 +22,8 @@
       </div>
     </header>
 
-    <!-- Section A -->
-
     <main>
+      <!-- Section A -->
       <section id="section-a">
         <h1>Expertise</h1>
         <p>Just a few of my skills ... </p>
@@ -56,10 +58,28 @@
         </ul>
       </section>
 
-      <!-- Section-b -->
+      <!-- Section B -->
       <section id="section-b">
-                
+        <h1>Personal Projects</h1>
+        <div class="project-card">
+          <img src="images/complete.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+        </div>
+        <div class="project-card">
+          <img src="images/complete.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+        </div>
+        <div class="project-card">
+          <img src="images/complete.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+        </div>
+        <div class="project-card">
+          <img src="images/complete.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+        </div>
       </section>
+
+      <!--Section C -->
     </main>
   </body>
 </html>
