--- a/new/index.html
+++ b/new/index.html
@@ -29,7 +29,7 @@
         <p>Just a few of my skills ... </p>
         <ul>
           <li>
-            <div class="card">
+            <div class="card" id="card-1">
               <img class="card-img" src="images/001-mobile.png" alt="">
               <div class="card-content">
                 <h2>Coding</h2>
@@ -38,7 +38,7 @@
             </div>
           </li>
           <li>
-            <div class="card">
+            <div class="card" id="card-2">
               <img class="card-img" src="images/002-settings.png" alt="">
               <div class="card-content">
                 <h2>Frameworks</h2>
@@ -46,8 +46,8 @@
               </div>
             </div>
           </li>
-          <li>
-            <div class="card">
+          <li style="margin-bottom:10px;">
+            <div class="card" id="card-3">
               <img class="card-img" src="images/003-responsive.png" alt="">
               <div class="card-content">
                 <h2>Responsive Design</h2>
@@ -61,25 +61,34 @@
       <!-- Section B -->
       <section id="section-b">
         <h1>Personal Projects</h1>
-        <div class="project-card">
-          <img src="images/complete.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
-        </div>
-        <div class="project-card">
-          <img src="images/complete.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
-        </div>
-        <div class="project-card">
-          <img src="images/complete.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
-        </div>
-        <div class="project-card">
-          <img src="images/complete.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+        <p>Here are a few projects I have worked on over the years. Some where driven by University and others just for fun.</p>
+        <div id="project-wrapper">
+          <div class="project-card">
+            <img src="images/complete.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+          </div>
+          <div class="project-card">
+            <img src="images/complete.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+          </div>
+          <div class="project-card">
+            <img src="images/complete.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+          </div>
+          <div class="project-card">
+            <img src="images/complete.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+          </div>
         </div>
       </section>
 
       <!--Section C -->
+      <section id="section-c">
+        <footer>
+          <p>Created by: Joshua Hudson</p>
+          <button type="button" name="button">Contact Me</button>
+        </footer>
+      </section>
     </main>
   </body>
 </html>
