--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="showcase">
         <div id="bg-image"></div>
         <div id="showcase-content">
-          <h1 id="showcase-title">Welcome to the site guys.</h1>
+          <h1 id="showcase-title">Hi, Im Josh. I develop web applicaitons.</h1>
           <button type="button" name="button">I'm available for hire.</button>
         </div>
         <div id="project-link">
