--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="css/master.css">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript">
+      window.onload = function(){
+        swal("Please Read!", "This Portfolio website is currently being created. It does not currently represent my skills and is being hosted using netlify and is connected to my git repo. Every commit I make updates this website and that is the reason it is currenly a mess. It will hopefully be completed by March, im currently trying to find the time between Univeristy and my Part Time job to complete it.");
+      }
+    </script>
   </head>
   <body>
     <header>
