Fixes and added content
Simply web has been added plus other bug fixes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Verson 2</title>
+    <title>Joshua Hudson</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/master.css">
     <!-- Fonts -->
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript">
       window.onload = function(){
-        swal("Please Read!", "This Portfolio website is currently being created. It does not currently represent my skills and is being hosted using netlify and is connected to my git repo. Every commit I make updates this website and that is the reason it is currenly a mess. It will hopefully be completed by March, im currently trying to find the time between Univeristy and my Part Time job to complete it.");
+        swal("Please Read!", "This Portfolio website is currently under construction. It does not currently represent my skills and is being hosted using netlify and is connected to my git repo. Every commit I make updates this website and that is the reason it is currenly a mess. It will hopefully be completed by March, im currently trying to find the time between Univeristy and my Part Time job to complete it.");
       }
     </script>
   </head>
@@ -19,7 +19,7 @@
       <div id="showcase">
         <div id="bg-image"></div>
         <div id="showcase-content">
-          <h1 id="showcase-title">Hi, Im Josh. I develop web applicaitons.</h1>
+          <h1 id="showcase-title">Welcome to the site guys.</h1>
           <button type="button" name="button">I'm available for hire.</button>
         </div>
         <div id="project-link">
@@ -39,7 +39,7 @@
               <img class="card-img" src="images/001-mobile.png" alt="">
               <div class="card-content">
                 <h2>Coding</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, totam! Magni culpa dolorem consequuntur accusamus et ratione corporis repellendus. Ab.</p>
+                <p>Over my years at University I've had the opitunity to play with many languages such as: HTML5, CSS3, Javascript, Jquery, PHP, Python. </p>
               </div>
             </div>
           </li>
@@ -48,7 +48,7 @@
               <img class="card-img" src="images/002-settings.png" alt="">
               <div class="card-content">
                 <h2>Frameworks</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, totam! Magni culpa dolorem consequuntur accusamus et ratione corporis repellendus. Ab.</p>
+                <p>Frameworks have always intrested me and I enjoy using them quite a lot. I have had experience in Laravel, EmberJS and Ruby on Rails. At the moment im looking at new and up coming frameworks to learn.</p>
               </div>
             </div>
           </li>
@@ -57,7 +57,7 @@
               <img class="card-img" src="images/003-responsive.png" alt="">
               <div class="card-content">
                 <h2>Responsive Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, totam! Magni culpa dolorem consequuntur accusamus et ratione corporis repellendus. Ab.</p>
+                <p>I believe every website should be created resposive especially now that so many people are on their phones. Every application I make I always strive to create it so it looks good on any screen.</p>
               </div>
             </div>
           </li>
@@ -67,25 +67,17 @@
       <!-- Section B -->
       <section id="section-b">
         <h1>Personal Projects</h1>
-        <p>Here are a few projects I have worked on over the years. Some where driven by University and others just for fun.</p>
+        <p>Here are a few projects I have worked on over the years. Some where driven by University and others just for fun.<br> At the moment all y projects have not been added but will be soon, when i find time between University and my part time job.</p>
         <div id="project-wrapper">
           <div class="project-card">
-            <img src="images/complete.png" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+            <a href="/projects/gigaweb-solutions"><img src="images/complete.png" alt=""></a>
+            <p>This project is one in which I started to learn the new technology which is CSS Grid.Its a one page website filled with dummy data for a fake comapny. It was created with a mobile first method with the CSS Grid starting to work when its viewed on a desktop.</p>
           </div>
           <div class="project-card">
-            <img src="images/complete.png" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
+            <a href="/projects/simply-web"><img src="images/simply-web-logo.png" alt=""></a>
+            <p>This project was created so I could learn how to use Googles Firebase service. Its a simple contact form page for a fake company. Javascript and CSS Grid was used and I believe I learnt a lot from this little project.</p>
           </div>
-          <div class="project-card">
-            <img src="images/complete.png" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
-          </div>
-          <div class="project-card">
-            <img src="images/complete.png" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quis beatae excepturi optio, repudiandae harum fugiat laborum, eius modi commodi.</p>
-          </div>
-        </div>
+
       </section>
 
       <!--Section C -->
