Meta tags added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joshua Hudson</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/master.css">
@@ -67,7 +69,7 @@
       <!-- Section B -->
       <section id="section-b">
         <h1>Personal Projects</h1>
-        <p>Here are a few projects I have worked on over the years. Some where driven by University and others just for fun.<br> At the moment all my projects have not been added but will be soon, when I find time between University and my part time job.</p>
+        <p>Here are a few projects I have worked on over the years. Some where driven by University and others just for fun.<br> At the moment all y projects have not been added but will be soon, when i find time between University and my part time job.</p>
         <div id="project-wrapper">
           <div class="project-card">
             <a href="/projects/gigaweb-solutions"><img src="images/complete.png" alt=""></a>
